tests/ui/proc-macro/multispan.stderr
error: hello to you, too!
  --> $DIR/auxiliary/multispan.rs:31:1
   |
LL | pub fn hello(input: TokenStream) -> TokenStream {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this expansion of `hello!`
   |
  ::: $DIR/multispan.rs:12:5
   |
LL |     hello!(hi);
   |     ---------- in this macro invocation
   |
note: found these 'hi's
  --> $DIR/multispan.rs:12:12
   |
LL |     hello!(hi);
   |            ^^

error: hello to you, too!
  --> $DIR/auxiliary/multispan.rs:31:1
   |
LL | pub fn hello(input: TokenStream) -> TokenStream {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this expansion of `hello!`
   |
  ::: $DIR/multispan.rs:15:5
   |
LL |     hello!(hi hi);
   |     ------------- in this macro invocation
   |
note: found these 'hi's
  --> $DIR/multispan.rs:15:12
   |
LL |     hello!(hi hi);
   |            ^^ ^^

error: hello to you, too!
  --> $DIR/auxiliary/multispan.rs:31:1
   |
LL | pub fn hello(input: TokenStream) -> TokenStream {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this expansion of `hello!`
   |
  ::: $DIR/multispan.rs:18:5
   |
LL |     hello!(hi hi hi);
   |     ---------------- in this macro invocation
   |
note: found these 'hi's
  --> $DIR/multispan.rs:18:12
   |
LL |     hello!(hi hi hi);
   |            ^^ ^^ ^^

error: hello to you, too!
  --> $DIR/auxiliary/multispan.rs:31:1
   |
LL | pub fn hello(input: TokenStream) -> TokenStream {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this expansion of `hello!`
   |
  ::: $DIR/multispan.rs:21:5
   |
LL |     hello!(hi hey hi yo hi beep beep hi hi);
   |     --------------------------------------- in this macro invocation
   |
note: found these 'hi's
  --> $DIR/multispan.rs:21:12
   |
LL |     hello!(hi hey hi yo hi beep beep hi hi);
   |            ^^     ^^    ^^           ^^ ^^

error: hello to you, too!
  --> $DIR/auxiliary/multispan.rs:31:1
   |
LL | pub fn hello(input: TokenStream) -> TokenStream {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this expansion of `hello!`
   |
  ::: $DIR/multispan.rs:22:5
   |
LL |     hello!(hi there, hi how are you? hi... hi.);
   |     ------------------------------------------- in this macro invocation
   |
note: found these 'hi's
  --> $DIR/multispan.rs:22:12
   |
LL |     hello!(hi there, hi how are you? hi... hi.);
   |            ^^        ^^              ^^    ^^

error: hello to you, too!
  --> $DIR/auxiliary/multispan.rs:31:1
   |
LL | pub fn hello(input: TokenStream) -> TokenStream {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this expansion of `hello!`
   |
  ::: $DIR/multispan.rs:23:5
   |
LL |     hello!(whoah. hi di hi di ho);
   |     ----------------------------- in this macro invocation
   |
note: found these 'hi's
  --> $DIR/multispan.rs:23:19
   |
LL |     hello!(whoah. hi di hi di ho);
   |                   ^^    ^^

error: hello to you, too!
  --> $DIR/auxiliary/multispan.rs:31:1
   |
LL | pub fn hello(input: TokenStream) -> TokenStream {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this expansion of `hello!`
   |
  ::: $DIR/multispan.rs:24:5
   |
LL |     hello!(hi good hi and good bye);
   |     ------------------------------- in this macro invocation
   |
note: found these 'hi's
  --> $DIR/multispan.rs:24:12
   |
LL |     hello!(hi good hi and good bye);
   |            ^^      ^^

error: aborting due to 7 previous errors

